...
        android:title="@string/Albums"
        app:showAsAction="never"/>
    <item android:id="@+id/artists"
        android:title="@string/Artists"
        app:showAsAction="never"/>
    <item android:id="@+id/collector"
        android:title="@string/Collectors"
        app:showAsAction="never"/>
    <item android:id="@+id/createAlbum"
        android:title="@string/NewAlbum"
        app:showAsAction="never"/>
    <item android:id="@+id/associateTrack"
        android:title="@string/Track"
...
