...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/collectorEmailTextView"
                android:layout_width="232dp"
                android:layout_height="match_parent"
                android:layout_marginStart="28dp"
                android:text="TextView"
                android:textColor="#3F51B5"
                android:textColorLink="#3F51B5" />
...
